--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=javaspring
 
 # Configuración de la base de datos de Oracle
+# username y password están guardados en variables de entorno en Intellij, RUN configurations
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
-spring.datasource.username=raul
-spring.datasource.password=12345
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # Configuración de JPA / Hibernate
